kubmanifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configcheckerapp
spec:
 replicas: 1
 selector:
  matchLabels:
    app: configcheckerapp
 template:
  metadata:
   labels:
    app: configcheckerapp
  spec:
   containers:
   - name: configcheckerapp
     image: elsaunier/configchecker:latest
     ports:
     - containerPort: 8181

---

apiVersion: v1
kind: Service
metadata:
  name: configcheckerapp-svc
  labels:
    app: configcheckerapp
spec:
  type: NodePort
  ports:
  - port: 8181
    nodePort: 30000
  selector:
    app: configcheckerapp
