ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: configchecker-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: '200'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '200'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '200'
    cert-manager.io/cluster-issuer: lets-encrypt-prod
spec:
  rules:
    - host: configchecker.k8s.svc.docaposte.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: configchecker-svc
                port:
                  number: 30000

          - path: /verif
            pathType: Prefix
            backend:
              service:
                name: configchecker-svc
                port:
                  number: 30000
